Routing to docs + logout
